--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,53 +1,20 @@
 <div class="panel panel-primary">
-  <div class="panel-heading">
-    <h2>Employee List</h2>
-  </div>
-  <div class="panel-body">
-    <table class="table table-striped">
+
+  <table class="table table-striped">
       <thead>
-        <tr>
-          <th>Id</th>
-          <th>Name</th>
-          <th>Age</th>
-          <th>Actions</th>
-        </tr>
+          <tr class="table-info">
+              <th scope="col">Id</th>
+              <th scope="col">Name</th>
+              <th scope="col">Age</th>
+          </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let user of users | async">
-          <td>{{<div class="panel panel-primary">
-  <div class="panel-heading">
-    <h2>Employee List</h2>
-  </div>
-  <div class="panel-body">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Id</th>
-          <th>Name</th>
-          <th>Age</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let user of users | async">
-          <td>{{user.id}}</td>
-          <td>{{user.name}}</td>
-          <td>{{user.age}}</td>
-          <td><button class="btn btn-danger">Delete</button>
-              <button class="btn btn-info" style="margin-left: 10px">Details</button>
-          </td>
-        </tr>
+          <tr *ngFor="let user of users | async">
+              <td>{{user.id}}</td>
+              <td>{{user.name}}</td>
+              <td>{{user.age}}</td>
+          </tr>
       </tbody>
-    </table>
-  </div>
-</div>.firstName}}</td>
-          <td>{{user.id}}</td>
-          <td>{{user.name}}</td>
-          <td>{{user.age}}</td>
-          <td><button  class="btn btn-danger">Delete</button>
-              <button class="btn btn-info" style="margin-left: 10px">Details</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  </table>
+
 </div>
